reactive issue fixing for couchbase